unpackaged/main/default/objects/HEM__c/HEM__c.object-meta.xml
<CustomObject>
    <description>Reference object for household expenditure measure</description>
    <label>HEM</label>
    <nameField>
        <displayFormat>HEM-{0000}</displayFormat>
        <label>HEM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HEM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>