unpackaged/main/default/objects/HEM__c/fields/Couple__c.field-meta.xml
<CustomField>
    <fullName>Couple__c</fullName>
    <label>Couple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>