unpackaged/main/default/objects/HEM__c/fields/Dependents__c.field-meta.xml
<CustomField>
    <fullName>Dependents__c</fullName>
    <label>Dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>