unpackaged/main/default/objects/HEM__c/fields/IncomeFrom__c.field-meta.xml
<CustomField>
    <fullName>IncomeFrom__c</fullName>
    <label>IncomeFrom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>