unpackaged/main/default/objects/HEM__c/fields/IncomeTo__c.field-meta.xml
<CustomField>
    <fullName>IncomeTo__c</fullName>
    <label>IncomeTo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>