unpackaged/main/default/objects/HEM__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <description>Quarter in the following format: YYYYMM</description>
    <inlineHelpText>Quarter in the following format: YYYYMM</inlineHelpText>
    <label>Quarter</label>
    <length>6</length>
    <type>Text</type>
</CustomField>